--- a/docs/professor/roberto_haruyoshi_ito.mdx
+++ b/docs/professor/roberto_haruyoshi_ito.mdx
@@ -33,7 +33,18 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Bovinocultura de Corte",
+          size: 2,
+          teachers: [
+            "Roberto Haruyoshi Ito"
+          ],
+          classroom: "Sala 14-2",
+          students: "AGR2022",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -63,16 +74,6 @@ const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Bovinocultura de Corte",
-          size: 2,
-          teachers: [
-            "Roberto Haruyoshi Ito"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGR2022",
-          time: "21:00 - 21:50"
-        },
         {
           subject: "Zootecnia Geral",
           size: 2,
