--- a/versioned_docs/version-2023.1.5/professor/diego_padovan_vieira.mdx
+++ b/versioned_docs/version-2023.1.5/professor/diego_padovan_vieira.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 const data = {
-  title: "Novo professor de Administração PSS",
+  title: "Diego Padovan Vieira",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -10,7 +10,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -22,7 +22,7 @@ const data = {
           subject: "Plano de Negócio",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -43,7 +43,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -55,7 +55,7 @@ const data = {
           subject: "Gestão de pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -72,7 +72,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -84,7 +84,7 @@ const data = {
           subject: "Projeto Integrador I",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -96,7 +96,7 @@ const data = {
           subject: "Técnicas de Vendas e Negociação",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -113,7 +113,7 @@ const data = {
           subject: "Fundamentos da Administração",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -125,7 +125,7 @@ const data = {
           subject: "Gestão Estratégica de Pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -137,7 +137,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -224,7 +224,7 @@ const data = {
   ]
 }
 
-# Novo professor de Administração PSS
+# Diego Padovan Vieira
 
 <div>
   {
