--- a/versioned_docs/version-2023.1.5/sala/sala_11-2.mdx
+++ b/versioned_docs/version-2023.1.5/sala/sala_11-2.mdx
@@ -34,7 +34,7 @@ const data = {
           subject: "Plano de Negócio",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -277,7 +277,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -354,7 +354,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
