--- a/versioned_docs/version-2023.1.5/sala/sala_13-2.mdx
+++ b/versioned_docs/version-2023.1.5/sala/sala_13-2.mdx
@@ -46,7 +46,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -104,7 +104,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 13-2",
           students: [
