--- a/versioned_docs/version-2023.1.5/turma/tgc2021.mdx
+++ b/versioned_docs/version-2023.1.5/turma/tgc2021.mdx
@@ -22,7 +22,7 @@ const data = {
           subject: "Plano de Negócio",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -97,7 +97,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -138,7 +138,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 11-2",
           students: [
