--- a/versioned_docs/version-2023.1.5/turma/tgc2022.mdx
+++ b/versioned_docs/version-2023.1.5/turma/tgc2022.mdx
@@ -109,7 +109,7 @@ const data = {
           subject: "Técnicas de Vendas e Negociação",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -138,7 +138,7 @@ const data = {
           subject: "Gestão Estratégica de Pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 3-1",
           students: [
