--- a/versioned_docs/version-2023.1.5/turma/tgc2023.mdx
+++ b/versioned_docs/version-2023.1.5/turma/tgc2023.mdx
@@ -22,7 +22,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -80,7 +80,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 13-2",
           students: [
