--- a/docs/professor/eduardo_alberto_felippsen.mdx
+++ b/docs/professor/eduardo_alberto_felippsen.mdx
@@ -14,7 +14,20 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -49,18 +62,6 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05"
-        },
         {
           subject: "Projeto Integrador III",
           size: 2,
