--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -54,7 +54,20 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -111,18 +124,6 @@ export const data = {
             "AGO2022"
           ],
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05"
         },
         {
           subject: "Projeto Integrador III",
