--- a/versioned_docs/version-2024.1.11/professor/danilo_hungaro_micheletti.mdx
+++ b/versioned_docs/version-2024.1.11/professor/danilo_hungaro_micheletti.mdx
@@ -48,7 +48,7 @@ export const data = {
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "EIN2022"
           ],
